test/classes/initializers/phase1/setGrandparentField.good
setGrandparentField.chpl:22: In initializer:
setGrandparentField.chpl:24: error: can't set value of inherited field "a" during phase 1 of initialization
